--- a/src/styles/ListAcoes.css
+++ b/src/styles/ListAcoes.css
@@ -22,7 +22,7 @@
 }
 
 table {
-  
+  border-spacing: 5px;
   width: 360px;
   font-weight: bold;
 }
@@ -39,14 +39,14 @@ table th {
 }
 
 table td  {
-  padding: 5px;
-  margin: 5px;
-  border-radius: 5px;  
+  padding: 3px;
+  
+  border-radius: 5px;
 }
 
 .ButtonCompra {
   background-color: var(--background-button-compra);
-  width: 31px;
+  width: 35px;
   height: 23px;
   border: none;
   border-radius: 5px; 
@@ -57,7 +57,7 @@ table td  {
 
 .ButtonVenda {
   background-color: var(--background-button-venda);
-  width: 31px;
+  width: 35px;
   height: 23px;
   border: none;
   border-radius: 5px;
@@ -72,7 +72,9 @@ a {
 
 .acoes {
   background-color: var(--background-acoes);
-  font-size: 12px;
+  font-size: 16px;
+  color: var(--background-button-primary);
+  font-weight: bolder;
 }
 
 .qtde {
@@ -90,4 +92,10 @@ a {
 button:disabled {
   background-color: #CFC1C1;
   color: #FFFFFF;  
+}
+
+.buttons {
+  
+  display: flex;
+  justify-content: space-around;
 }
