--- a/src/styles/MeuSaldo.css
+++ b/src/styles/MeuSaldo.css
@@ -1,4 +1,4 @@
-.MeuSaldo {
+/* .MeuSaldo {
   padding: 10px 0;
   background-color: var(--background-primary);
   height: 100vh;
@@ -91,4 +91,4 @@
 
 
 
-
+ */
