--- a/src/styles/CompraVenda.css
+++ b/src/styles/CompraVenda.css
@@ -1,7 +1,7 @@
-.CompraVenda {
+/* .CompraVenda {
   background-color: var(--background-primary);
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
+} */
