--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,25 +1,25 @@
 .Header{
+  align-items: center;  
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  max-width: 400px;
+  margin-bottom: 20px; 
   min-width: 360px;
-  margin-bottom: 20px;  
+  width: 100%; 
 }
 
 .Header img {
-  width: 128px;  
+  width: 130px;  
 }
 
 .Header div {
-  width: 163px;
-  height: 33px;
   background-color: var(--background-button-primary);
-  font-size: 12px;  
-  text-align: center;
-  color: #FFFFFF;
   border-radius: 5px;
+  color: #FFFFFF;
+  font-size: 12px;  
+  height: 33px;
   line-height: 33px;
+  text-align: center;
+  width: 163px;
 }
 
 .Header span {
