--- a/src/styles/ListAcoes.css
+++ b/src/styles/ListAcoes.css
@@ -1,30 +1,9 @@
-.ListAcoes {
-  background-color: var(--background-primary);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 10px;
-  min-height: 100vh;
-}
-
-.ListAcoes .Acoes {
-  border-radius: 5px;
-  width: 360px;
-  height: 33px;
-  background-color: var(--background-button-primary);
-  color: #FFFFFF;
-  line-height: 33px;
-  text-align: center;
-  font-size: 16px;
-  font-weight: bold;
-  margin: 20px 0;
-}
 
 table {
-  border-spacing: 5px;
-  width: 360px;
+  background-color: rgb(232, 142, 24);  
   font-weight: bold;
+  min-width: 360px;
+  width: 100%;  
 }
 
 table tr {
@@ -39,63 +18,8 @@ table th {
 }
 
 table td  {
-  padding: 3px;
-  
+  padding: 3px;  
   border-radius: 5px;
-}
-
-.ButtonCompra {
-  background-color: var(--background-button-compra);
-  width: 35px;
-  height: 23px;
-  border: none;
-  border-radius: 5px; 
-  font-size: 16px;
-  font-weight: bold;
-  
-}
-
-.ButtonVenda {
-  background-color: var(--background-button-venda);
-  width: 35px;
-  height: 23px;
-  border: none;
-  border-radius: 5px;
-  font-size: 16px;
-  font-weight: bold;
-}
-
-a {
-  text-decoration: none;
-  color: #FFFFFF;
-}
-
-.acoes {
-  background-color: var(--background-acoes);
-  font-size: 16px;
-  color: var(--background-button-primary);
-  font-weight: bolder;
-}
-
-.qtde {
-  background-color: var(--background-qtde);
-  font-size: 12px;
-  color: #FFFFFF;
-}
-
-.valor {
-  background-color: var(--background-valor);
-  font-size: 12px;
-  color: #FFFFFF;
-}
-
-button {
-  cursor: pointer;
-}
-
-button:disabled {
-  background-color: #CFC1C1;
-  color: #FFFFFF;  
 }
 
 .buttons {  
