--- a/src/styles/MeuSaldo.css
+++ b/src/styles/MeuSaldo.css
@@ -1,73 +1,54 @@
-.MeuSaldo {
-  text-align: center;  
+.MeuSaldo {  
+  text-align: center; 
 }
 
 .saldo {
-  background-color: var(--background-button-primary);
-  width: 100%;
-  height: 30px;
-  display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding: 0 10px;
+  background-color: var(--background-button-primary);
   border-radius: 5px;  
+  display: flex;
+  height: 30px;
+  justify-content: space-between;
+  padding: 0 10px;
+  width: 100%;
 }
 
 .DepositoRetirada .inputValor {
-  margin: 80px 0 30px 0;
-
-  width: 235px;
-  height: 40px;
+  border: none;
   border-radius: 5px;
+  color: var(--background-button-primary);
   font-size: 24px;
   font-weight: bold;
+  height: 40px;
+  margin: 80px 0 30px 0;
   text-align: center;
-  color: var(--background-button-primary);
-  border: none;
+  width: 235px;
 }
 
-/* .DepositoRetirada button{  
-  border: none;
+.btnDepositar, .btnRetirada{
   border-radius: 5px;
-  color: #FFF;
-  width: 120px;
+  color: #FFFFFF;
+  height: 38px;  
+  font-size: 20px;
   font-weight: bold;
-} */
+  width: 120px;
+}
 
-/* .btnDepositar {
-  height: 38px;
+.btnDepositar {
   background-color: var(--background-button-compra);
-  font-size: 20px;
-  cursor: pointer;
-} */
+}
 
-/* .btnRetirada {
-  height: 38px;
-  background-color: var(--background-button-venda);
-  font-size: 20px;
-  cursor: pointer;
-} */
+.btnRetirada {  
+  background-color: var(--background-button-venda);  
+}
 
-/* .btnVoltar {
-  height: 30px;
-  font-size: 16px;  
-  background-color: var(--background-button-primary);
-  cursor: pointer;
-} */
-
-/* .btnConfirmar {
-  height: 30px;
-  font-size: 16px;  
-  background-color: var(--background-button-primary);
-} */
-
-/* .DepositoRetirada .buttons {
-  margin-top: 100px;
+.MeuSaldo .buttons {
   display: flex;
-  width: 100%;
   justify-content: space-between;
+  margin-top: 100px;
+  width: 100%;
   
-} */
+}
 
 
 
