--- a/src/styles/ListAcoes.css
+++ b/src/styles/ListAcoes.css
@@ -3,11 +3,11 @@ table {
   font-weight: bold;
   min-width: 360px;
   margin: 20px 0 30px 0;
-  width: 100%;  
+  width: 100%;
+  border-spacing: 10px; 
 }
 
-table tr {
- 
+table tr { 
   text-align: center;  
 }
 
