--- a/src/styles/Operacoes.css
+++ b/src/styles/Operacoes.css
@@ -1,56 +1,18 @@
-/* .Operacoes {
-  
-  padding: 20px 10px;
-  
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100%;
-}
 
-.title {
-  background-color: var(--background-button-primary);
-  font-size: 16px;
-  font-weight: bold;  
+.Operacoes .saldo {
+  width: 25%;
+  color:#FFFFFF;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
+ .Operacoes input {
+  width: 100%;
+  border: none;
+  border-radius: 5px;
   text-align: center;
+ }
+
+ .Operacoes .totalPagar{
+  background-color: var(--background-acoes);
   color: #FFFFFF;
-  border-radius: 5px;
-  line-height: 33px;
-  width: 100%;
-  margin-bottom: 45px;
-}
-
-.Operacoes table {
-  margin-bottom: 100px;
-}
-
-.Operacoes .buttons {
-  
-  width: 100%;
-  margin-bottom: 100px;
-}
-
-.Operacoes .voltar {  
-  justify-content: flex-start;
-}
-
-.Operacoes .btnVoltar, button {
-  width: 120px;
-  border-radius: 5px;
-  font-size: 16px;
-  font-weight: bold;  
-}
-
-.btnDepositoRetirada {
-  width: 800px;
-  background-color: var(--background-button-primary);
-  font-size: 16px;
-  font-weight: bold;  
-  text-align: center;
-  color: #FFFFFF;
-  border-radius: 5px;
-  line-height: 33px;
-  width: 100%;
-  margin-bottom: 45px;
-}
- */
+ }
