--- a/src/styles/CompraVenda.css
+++ b/src/styles/CompraVenda.css
@@ -1,9 +1,10 @@
-.CompraVenda {  
-  height: 100vh;  
+.CompraVenda { 
+  min-height: 100vh; 
+  height: 100%;  
 }
 
 .CompraVenda table {
-  margin: 55px 0;  
+  margin: 45px 0;  
 }
 
 td {
@@ -11,7 +12,7 @@ td {
 }
 
 .CompraVenda .btnVoltar {
-  margin-top: 150px;
+  margin-top: 120px;
 }
 
 .btnDepositoRetirada {  
